--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Webpack Template</title>
-  </head>
-  <body>
-    
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Marketika</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@300;400;700&display=swap"
+    rel="stylesheet">
+</head>
+<!-- Header-->
+<section class="section-outer section-header">
+  <div class="section-inner">
+    <div class="section-header-logo">Marketika</div>
+    <div class="section-header-content">
+      <div class="section-header-wrapper">
+        <div class="section-header-wrapper__title">We are here to help</div>
+        <div class="section-header-wrapper__subtitle">Very professional and highly customizable sketch template with
+          lots
+          of custom pages and useful features</div>
+        <div class="section-header-wrapper__form">
+          <div class="section-header-wrapper__form-input">
+            <input type="text" placeholder="Your Name">
+          </div>
+          <div class="section-header-wrapper__form-input">
+            <input type="text" placeholder="Your Email">
+          </div>
+          <div class="section-header-wrapper__form-button">
+            <button>Get Started</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- / Header -->
+
+<!-- Promo -->
+<section class="section-outer section-promo">
+  <div class="section-inner">
+    <div class="section-promo-1">
+      <div class="section-promo-1__content">
+        <div class="title">Grow up your business with
+          maketica maketing landing page</div>
+          <div class="description-item">
+            <div class="description-item__title">Increase your visitors</div>
+            <div class="description-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+          </div>
+          <div class="description-item">
+            <div class="description-item__title">Start social media campaign</div>
+            <div class="description-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+          </div>
+
+      </div>
+      <div class="section-promo-1__video">
+        <img src="/assets/img/video.png" alt="video">
+      </div>
+    </div>
+    <div class="section-promo-2">
+      <div class="description-item">
+        <div class="description-item__icon">
+          <img src="assets/img/icon-idea.png" alt="idea">
+        </div>
+        <div class="description-item__title">Start your marketing</div>
+        <div class="description-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+      </div>
+      <div class="description-item">
+        <div class="description-item__icon">
+          <img src="assets/img/icon-idea.png" alt="idea">
+        </div>
+        <div class="description-item__title">Start your marketing</div>
+        <div class="description-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+      </div>
+      <div class="description-item">
+        <div class="description-item__icon">
+          <img src="assets/img/icon-idea.png" alt="idea">
+        </div>
+        <div class="description-item__title">Start your marketing</div>
+        <div class="description-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+      </div>
+    </div>
+  </div>
+
+  </div>
+</section>
+<!-- / Promo -->
+
+<!-- Founder -->
+<section class="section-outer section-founder">
+  <div class="section-inner">
+    <div class="section-founder__img">
+      <img src="assets/img/founder.png" alt="">
+    </div>
+    <div class="section-founder__content">
+      <div class="section-founder__content-text">Content should be a journey. It should hit users at all the stages: awareness, consideration, and decision. If your content doesn’t continue to inform and be relevant, users will get turned off. A pipeline is only as good as the quality and readiness of leads.</div>
+      <div class="section-founder__content-name">Andrew Bichel</div>
+      <div class="section-founder__content-post">Founder, Marketing</div>
+    </div>
+  </div>
+</section>
+<!-- / Founder -->
+
+<!-- Plans -->
+<section class="section-outer section-plans">
+  <div class="section-inner">
+    <div class="section-plans__title">Choose your suitable plans</div>
+    <div class="section-plans__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+    <div class="section-plans__list">
+      <div class="section-plans__list-item active">
+        <div class="ection-plans__list-item_title">FREE</div>
+        <div class="ection-plans__list-item_price">$0 /mo</div>
+        <div class="ection-plans__list-item_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+        <div class="ection-plans__list-item_button">
+          <a href="#">Get Started</a>
+        </div>
+      </div>
+      <div class="section-plans__list-item">
+        <div class="ection-plans__list-item_title">PREMIUN</div>
+        <div class="ection-plans__list-item_price">$39 /mo</div>
+        <div class="ection-plans__list-item_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+        <div class="ection-plans__list-item_button">
+          <a href="#">Get Started</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- / Plans -->
+
+<!-- Free -->
+<section class="section-outer section-free">
+  <div class="section-inner">
+    Section-free
+  </div>
+</section>
+<!-- / Free -->
+
+<!-- Footer -->
+<section class="section-outer section-footer">
+  <div class="section-inner">
+    Section-footer
+  </div>
+</section>
+<!-- / Footer -->
+
+<body>
+
+</body>
+
 </html>
