final without adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -21,17 +21,19 @@
         <div class="section-header-wrapper__subtitle">Very professional and highly customizable sketch template with
           lots
           of custom pages and useful features</div>
-        <div class="section-header-wrapper__form">
-          <div class="section-header-wrapper__form-input">
-            <input type="text" placeholder="Your Name">
+        <form action="">
+          <div class="section-header-wrapper__form">
+            <div class="section-header-wrapper__form-input">
+              <input type="text" placeholder="Your Name">
+            </div>
+            <div class="section-header-wrapper__form-input">
+              <input type="text" placeholder="Your Email">
+            </div>
+            <div class="section-header-wrapper__form-button">
+              <button class="btn-main">Get Started</button>
+            </div>
           </div>
-          <div class="section-header-wrapper__form-input">
-            <input type="text" placeholder="Your Email">
-          </div>
-          <div class="section-header-wrapper__form-button">
-            <button>Get Started</button>
-          </div>
-        </div>
+        </form>
       </div>
     </div>
   </div>
@@ -45,16 +47,16 @@
       <div class="section-promo-1__content">
         <div class="title">Grow up your business with
           maketica maketing landing page</div>
-          <div class="description-item">
-            <div class="description-item__title">Increase your visitors</div>
-            <div class="description-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
-          </div>
-          <div class="description-item">
-            <div class="description-item__title">Start social media campaign</div>
-            <div class="description-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
-          </div>
+        <div class="description-item">
+          <div class="description-item__title">Increase your visitors</div>
+          <div class="description-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+        </div>
+        <div class="description-item">
+          <div class="description-item__title">Start social media campaign</div>
+          <div class="description-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+        </div>
 
       </div>
       <div class="section-promo-1__video">
@@ -100,7 +102,9 @@
       <img src="assets/img/founder.png" alt="">
     </div>
     <div class="section-founder__content">
-      <div class="section-founder__content-text">Content should be a journey. It should hit users at all the stages: awareness, consideration, and decision. If your content doesn’t continue to inform and be relevant, users will get turned off. A pipeline is only as good as the quality and readiness of leads.</div>
+      <div class="section-founder__content-text">Content should be a journey. It should hit users at all the stages:
+        awareness, consideration, and decision. If your content doesn’t continue to inform and be relevant, users will
+        get turned off. A pipeline is only as good as the quality and readiness of leads.</div>
       <div class="section-founder__content-name">Andrew Bichel</div>
       <div class="section-founder__content-post">Founder, Marketing</div>
     </div>
@@ -112,22 +116,27 @@
 <section class="section-outer section-plans">
   <div class="section-inner">
     <div class="section-plans__title">Choose your suitable plans</div>
-    <div class="section-plans__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+    <div class="section-plans__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+      incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
     <div class="section-plans__list">
       <div class="section-plans__list-item active">
-        <div class="ection-plans__list-item_title">FREE</div>
-        <div class="ection-plans__list-item_price">$0 /mo</div>
-        <div class="ection-plans__list-item_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
-        <div class="ection-plans__list-item_button">
-          <a href="#">Get Started</a>
+        <div class="section-plans__list-item_title">FREE</div>
+        <div class="section-plans__list-item_price"><span class="prefix">$0</span> <span class="postfix">/mo</span>
+        </div>
+        <div class="section-plans__list-item_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+          do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+        <div class="section-plans__list-item_button">
+          <a href="#" class="btn-main">Get Started</a>
         </div>
       </div>
       <div class="section-plans__list-item">
-        <div class="ection-plans__list-item_title">PREMIUN</div>
-        <div class="ection-plans__list-item_price">$39 /mo</div>
-        <div class="ection-plans__list-item_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
-        <div class="ection-plans__list-item_button">
-          <a href="#">Get Started</a>
+        <div class="section-plans__list-item_title">PREMIUN</div>
+        <div class="section-plans__list-item_price"><span class="prefix">$39</span> <span class="postfix">/mo</span>
+        </div>
+        <div class="section-plans__list-item_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+          do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+        <div class="section-plans__list-item_button">
+          <a href="#" class="btn-secondary">Get Started</a>
         </div>
       </div>
     </div>
@@ -138,7 +147,13 @@
 <!-- Free -->
 <section class="section-outer section-free">
   <div class="section-inner">
-    Section-free
+    <div class="section-free__title">It’s free, Get started today</div>
+    <div class="section-free__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</div>
+    <div class="section-free__button btn-secondar">
+      <button class="btn-free">Get Started</button>
+    </div>
+
   </div>
 </section>
 <!-- / Free -->
@@ -146,7 +161,26 @@
 <!-- Footer -->
 <section class="section-outer section-footer">
   <div class="section-inner">
-    Section-footer
+    <div class="section-footer__logo">Marketika</div>
+    <ul class="section-footer__nav">
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">FAQ</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Contact Us</a></li>
+    </ul>
+    <div class="section-footer__copyright_and_links">
+      <div class="section-footer__copyright_and_links-copyright">
+        Copyright © Sepra 2018 All Right Resereved
+      </div>
+      <div class="section-footer__copyright_and_links-links">
+        <ul class="helper-link">
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms Of Services</a></li>
+          <li><a href="#">Security</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
 </section>
 <!-- / Footer -->
