final with adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
 <!-- Header-->
 <section class="section-outer section-header">
   <div class="section-inner">
-    <div class="section-header-logo">Marketika</div>
+    <div class="section-header-logo">
+      <a href="#">Marketika</a>
+    </div>
     <div class="section-header-content">
       <div class="section-header-wrapper">
         <div class="section-header-wrapper__title">We are here to help</div>
